--- a/SlidingTilePuzzle.ipynb
+++ b/SlidingTilePuzzle.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "SlidingTilePuzzle.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPzy68B+IyjnnzbGxRhQHOH",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,6 +20,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/dnlgomesl/sliding-ia-projeto/blob/master/SlidingTilePuzzle.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# Sliding Tile Puzzle"
       ],
@@ -27,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 107,
       "metadata": {
         "id": "WYBOqyaMt8Uy"
       },
@@ -53,7 +65,7 @@
         "      linha = random.randint(0, 2)\n",
         "      coluna = random.randint(0, 2)\n",
         "\n",
-        "      if tabuleiro[linha][coluna] == 0:\n",
+        "      if tabuleiro[linha][coluna] == 0 and (linha != 2 or coluna != 2):\n",
         "        tabuleiro[linha][coluna] = i\n",
         "        i+=1\n",
         "\n",
@@ -144,7 +156,7 @@
       "source": [
         "## Estados para um tabuleiro aleatório\n",
         "\n",
-        "Por definição do jogo o espaço vazio é o espaço que se move, aqui definimos o espaço vazio como sendo 0."
+        "Por definição do jogo o espaço vazio é o espaço que se move, aqui definimos o espaço vazio como sendo 0. O estado inicial sempre virá com a posição vazia sendo a posição inferior mais a direita."
       ],
       "metadata": {
         "id": "RIX_EBJs_ULF"
@@ -161,115 +173,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z_ZS9J6jyq88",
-        "outputId": "a082a728-ad6b-4fe6-81f1-588a4d2f48b4"
+        "outputId": "a9a200a4-8b70-4062-e796-89f16efa746c"
       },
-      "execution_count": 85,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 8 5\n",
-            "1 4 2\n",
-            "6 7 3\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Movendo o espaço vazio para a direita\n",
-        "\n",
-        "O espaço vazio pode se mover para direita até que chegue na extremidade direita, após isso, mesmo que o jogador tente mover a peça para a direita nada acontecerá."
-      ],
-      "metadata": {
-        "id": "1C6n1jvlBo1h"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "tabuleiro.direita()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RvbZGw6O-b50",
-        "outputId": "6212a45e-d5f4-44fb-ecdd-23857275f995"
-      },
-      "execution_count": 86,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "8 0 5\n",
-            "1 4 2\n",
-            "6 7 3\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "tabuleiro.direita()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d-M71ra7CInO",
-        "outputId": "8522c7d2-4502-49c6-85de-437c5ee132c6"
-      },
-      "execution_count": 87,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "8 5 0\n",
-            "1 4 2\n",
-            "6 7 3\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Perceba na célula acima que a posição vazia já se encontra na extremidade direita, por isso, ao tentar movimentar novamente nada acontecerá. Isto pode ser visto a seguir"
-      ],
-      "metadata": {
-        "id": "wlzi8IEACUYF"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "tabuleiro.direita()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sbTAjKTvCKbg",
-        "outputId": "128cb39e-4c94-4e77-9bab-4d61c29c4579"
-      },
-      "execution_count": 89,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "8 5 0\n",
-            "1 4 2\n",
-            "6 7 3\n",
+            "6 3 2\n",
+            "5 4 8\n",
+            "7 1 0\n",
             "\n"
           ]
         }
@@ -296,17 +210,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RwdOHjrw7dlw",
-        "outputId": "06fc93ed-7c1f-4006-a6a5-49823f56cc19"
+        "outputId": "b1ca92a5-0c8f-4e54-f001-05fedc2d9708"
       },
-      "execution_count": 90,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "8 0 5\n",
-            "1 4 2\n",
-            "6 7 3\n",
+            "6 3 2\n",
+            "5 4 8\n",
+            "7 0 1\n",
             "\n"
           ]
         }
@@ -322,17 +236,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mfs5WbwICsJh",
-        "outputId": "c67aba22-3913-43f4-94b7-9bf705b05c1e"
+        "outputId": "a9bb9ebc-2175-487a-d937-1aa7827d6998"
       },
-      "execution_count": 91,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 8 5\n",
-            "1 4 2\n",
-            "6 7 3\n",
+            "6 3 2\n",
+            "5 4 8\n",
+            "0 7 1\n",
             "\n"
           ]
         }
@@ -357,17 +271,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BWJEOwGzCtYJ",
-        "outputId": "afadf4a9-2e8c-4c55-92fa-f669ddabe97a"
+        "outputId": "61077639-01ab-4dbd-bc47-1c6ea0f0b69d"
       },
-      "execution_count": 92,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 8 5\n",
-            "1 4 2\n",
-            "6 7 3\n",
+            "6 3 2\n",
+            "5 4 8\n",
+            "0 7 1\n",
             "\n"
           ]
         }
@@ -376,35 +290,35 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Movendo o espaço vazio para baixo\n",
+        "## Movendo o espaço vazio para a direita\n",
         "\n",
-        "O espaço vazio pode se mover para cima até que chegue na extremidade inferior, após isso, mesmo que o jogador tente mover a peça para baixo nada acontecerá."
+        "O espaço vazio pode se mover para direita até que chegue na extremidade direita, após isso, mesmo que o jogador tente mover a peça para a direita nada acontecerá."
       ],
       "metadata": {
-        "id": "W6L9RyXaCluG"
+        "id": "1C6n1jvlBo1h"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.baixo()"
+        "tabuleiro.direita()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "INxCcEa8EwSR",
-        "outputId": "7d7d5a09-1b15-4901-99c7-5bf89e6fb025"
+        "id": "RvbZGw6O-b50",
+        "outputId": "75392779-3ec4-4862-be4c-c11df48be1ad"
       },
-      "execution_count": 93,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 8 5\n",
-            "0 4 2\n",
-            "6 7 3\n",
+            "6 3 2\n",
+            "5 4 8\n",
+            "7 0 1\n",
             "\n"
           ]
         }
@@ -413,24 +327,24 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.baixo()"
+        "tabuleiro.direita()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2HDc7vN8ExHF",
-        "outputId": "dbcc3bfd-bac1-45e5-e27c-3814f104fa8a"
+        "id": "d-M71ra7CInO",
+        "outputId": "b8665453-c3a1-4331-cbe3-e86ba65d90ba"
       },
-      "execution_count": 94,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 8 5\n",
-            "6 4 2\n",
-            "0 7 3\n",
+            "6 3 2\n",
+            "5 4 8\n",
+            "7 1 0\n",
             "\n"
           ]
         }
@@ -439,33 +353,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Perceba na célula acima que a posição vazia já se encontra na extremidade inferior, por isso, ao tentar movimentar novamente para baixo nada acontecerá. Isto pode ser visto a seguir"
+        "Perceba na célula acima que a posição vazia já se encontra na extremidade direita, por isso, ao tentar movimentar novamente nada acontecerá. Isto pode ser visto a seguir"
       ],
       "metadata": {
-        "id": "luqterebE7L7"
+        "id": "wlzi8IEACUYF"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.baixo()"
+        "tabuleiro.direita()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "7iNlV7StEx2Q",
-        "outputId": "9386b931-a710-4c6d-df87-d09d6fe1b9e5"
+        "id": "sbTAjKTvCKbg",
+        "outputId": "0ddf7def-b594-431e-e1d4-48ae6a2f7a7d"
       },
-      "execution_count": 97,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 8 5\n",
-            "6 4 2\n",
-            "0 7 3\n",
+            "6 3 2\n",
+            "5 4 8\n",
+            "7 1 0\n",
             "\n"
           ]
         }
@@ -492,17 +406,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bHeHInT5-d37",
-        "outputId": "8e9c4268-069f-4958-efe0-8347115826ce"
+        "outputId": "decd392d-5773-4c1f-90fd-0e2edfcea589"
       },
-      "execution_count": 98,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 8 5\n",
-            "0 4 2\n",
-            "6 7 3\n",
+            "6 3 2\n",
+            "5 4 0\n",
+            "7 1 8\n",
             "\n"
           ]
         }
@@ -518,17 +432,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9cmqrY_5FNpb",
-        "outputId": "64a9ad38-044a-4598-b518-a74ef7701f93"
+        "outputId": "cd1dd90d-e66a-4ea7-b609-99ce9334dcff"
       },
-      "execution_count": 99,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 8 5\n",
-            "1 4 2\n",
-            "6 7 3\n",
+            "6 3 0\n",
+            "5 4 2\n",
+            "7 1 8\n",
             "\n"
           ]
         }
@@ -553,17 +467,115 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j0nMvtY8Dmpu",
-        "outputId": "c4d4c799-bdb4-4794-ffdf-bff667de15dd"
+        "outputId": "ef43e5bf-8635-4bb9-8d1e-cf5e2bd15131"
       },
-      "execution_count": 101,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 8 5\n",
-            "1 4 2\n",
-            "6 7 3\n",
+            "6 3 0\n",
+            "5 4 2\n",
+            "7 1 8\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Movendo o espaço vazio para baixo\n",
+        "\n",
+        "O espaço vazio pode se mover para cima até que chegue na extremidade inferior, após isso, mesmo que o jogador tente mover a peça para baixo nada acontecerá."
+      ],
+      "metadata": {
+        "id": "W6L9RyXaCluG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tabuleiro.baixo()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "INxCcEa8EwSR",
+        "outputId": "1366399e-a7a3-405e-9c41-350f4b159c2f"
+      },
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6 3 2\n",
+            "5 4 0\n",
+            "7 1 8\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tabuleiro.baixo()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2HDc7vN8ExHF",
+        "outputId": "aec61ddd-abec-4693-f591-61d9c30d974f"
+      },
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6 3 2\n",
+            "5 4 8\n",
+            "7 1 0\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Perceba na célula acima que a posição vazia já se encontra na extremidade inferior, por isso, ao tentar movimentar novamente para baixo nada acontecerá. Isto pode ser visto a seguir"
+      ],
+      "metadata": {
+        "id": "luqterebE7L7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tabuleiro.baixo()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7iNlV7StEx2Q",
+        "outputId": "2d96cee5-06db-4054-bca9-7ee1365d0183"
+      },
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6 3 2\n",
+            "5 4 8\n",
+            "7 1 0\n",
             "\n"
           ]
         }
@@ -590,9 +602,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aBKUYOTwAow0",
-        "outputId": "62572165-7ec3-496c-c160-d3df13c82fb7"
+        "outputId": "40ccd22c-9cc4-4a02-a2b6-fe5d34734db0"
       },
-      "execution_count": 102,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
