--- a/SlidingTilePuzzle.ipynb
+++ b/SlidingTilePuzzle.ipynb
@@ -6,7 +6,7 @@
       "name": "SlidingTilePuzzle.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPzy68B+IyjnnzbGxRhQHOH",
+      "authorship_tag": "ABX9TyM2w6Jd+sAb5APuDzCydIql",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 152,
       "metadata": {
         "id": "WYBOqyaMt8Uy"
       },
@@ -68,6 +68,10 @@
         "      if tabuleiro[linha][coluna] == 0 and (linha != 2 or coluna != 2):\n",
         "        tabuleiro[linha][coluna] = i\n",
         "        i+=1\n",
+        "      \n",
+        "      if tabuleiro == self.tabuleiro_f:\n",
+        "        tabuleiro = [[0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
+        "        i = 1\n",
         "\n",
         "    return tabuleiro  \n",
         "  \n",
@@ -156,7 +160,7 @@
       "source": [
         "## Estados para um tabuleiro aleatório\n",
         "\n",
-        "Por definição do jogo o espaço vazio é o espaço que se move, aqui definimos o espaço vazio como sendo 0. O estado inicial sempre virá com a posição vazia sendo a posição inferior mais a direita."
+        "Por definição do jogo o espaço vazio é o espaço que se move, aqui definimos o espaço vazio como sendo 0. O estado inicial sempre virá com a posição vazia sendo a posição inferior mais a direita. E nunca será igual ao estado final."
       ],
       "metadata": {
         "id": "RIX_EBJs_ULF"
@@ -173,17 +177,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z_ZS9J6jyq88",
-        "outputId": "a9a200a4-8b70-4062-e796-89f16efa746c"
+        "outputId": "54d8a415-48ae-42d0-84ff-a35beb2be704"
       },
-      "execution_count": 111,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 2\n",
-            "5 4 8\n",
-            "7 1 0\n",
+            "1 5 2\n",
+            "6 8 3\n",
+            "7 4 0\n",
             "\n"
           ]
         }
@@ -210,17 +214,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RwdOHjrw7dlw",
-        "outputId": "b1ca92a5-0c8f-4e54-f001-05fedc2d9708"
+        "outputId": "40b986f1-2edc-49c6-9b33-24f0b5feb0a0"
       },
-      "execution_count": 112,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 2\n",
-            "5 4 8\n",
-            "7 0 1\n",
+            "1 5 2\n",
+            "6 8 3\n",
+            "7 0 4\n",
             "\n"
           ]
         }
@@ -236,17 +240,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mfs5WbwICsJh",
-        "outputId": "a9bb9ebc-2175-487a-d937-1aa7827d6998"
+        "outputId": "58e191e6-3fb9-439e-b717-73367f0cf0a5"
       },
-      "execution_count": 113,
+      "execution_count": 155,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 2\n",
-            "5 4 8\n",
-            "0 7 1\n",
+            "1 5 2\n",
+            "6 8 3\n",
+            "0 7 4\n",
             "\n"
           ]
         }
@@ -271,17 +275,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BWJEOwGzCtYJ",
-        "outputId": "61077639-01ab-4dbd-bc47-1c6ea0f0b69d"
+        "outputId": "6a7c94ad-2531-44b0-cb2e-91284f7340eb"
       },
-      "execution_count": 114,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 2\n",
-            "5 4 8\n",
-            "0 7 1\n",
+            "1 5 2\n",
+            "6 8 3\n",
+            "0 7 4\n",
             "\n"
           ]
         }
@@ -308,17 +312,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RvbZGw6O-b50",
-        "outputId": "75392779-3ec4-4862-be4c-c11df48be1ad"
+        "outputId": "ea884e8f-2af5-43f9-cb3b-20c556853f0a"
       },
-      "execution_count": 115,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 2\n",
-            "5 4 8\n",
-            "7 0 1\n",
+            "1 5 2\n",
+            "6 8 3\n",
+            "7 0 4\n",
             "\n"
           ]
         }
@@ -334,17 +338,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d-M71ra7CInO",
-        "outputId": "b8665453-c3a1-4331-cbe3-e86ba65d90ba"
+        "outputId": "d28b92bc-86a7-4f29-86d4-bfaeb416a71c"
       },
-      "execution_count": 116,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 2\n",
-            "5 4 8\n",
-            "7 1 0\n",
+            "1 5 2\n",
+            "6 8 3\n",
+            "7 4 0\n",
             "\n"
           ]
         }
@@ -369,17 +373,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sbTAjKTvCKbg",
-        "outputId": "0ddf7def-b594-431e-e1d4-48ae6a2f7a7d"
+        "outputId": "59e5dfd4-b7a7-485e-ce1c-0b73cf183b45"
       },
-      "execution_count": 117,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 2\n",
-            "5 4 8\n",
-            "7 1 0\n",
+            "1 5 2\n",
+            "6 8 3\n",
+            "7 4 0\n",
             "\n"
           ]
         }
@@ -406,17 +410,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bHeHInT5-d37",
-        "outputId": "decd392d-5773-4c1f-90fd-0e2edfcea589"
+        "outputId": "087fa653-afde-4cca-94da-4b8629330c1c"
       },
-      "execution_count": 119,
+      "execution_count": 160,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 2\n",
-            "5 4 0\n",
-            "7 1 8\n",
+            "1 5 2\n",
+            "6 8 0\n",
+            "7 4 3\n",
             "\n"
           ]
         }
@@ -432,17 +436,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9cmqrY_5FNpb",
-        "outputId": "cd1dd90d-e66a-4ea7-b609-99ce9334dcff"
+        "outputId": "378a2cb5-26a4-47a8-ff3e-3f4a82dde26b"
       },
-      "execution_count": 120,
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 0\n",
-            "5 4 2\n",
-            "7 1 8\n",
+            "1 5 0\n",
+            "6 8 2\n",
+            "7 4 3\n",
             "\n"
           ]
         }
@@ -467,17 +471,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j0nMvtY8Dmpu",
-        "outputId": "ef43e5bf-8635-4bb9-8d1e-cf5e2bd15131"
+        "outputId": "083bc366-3f46-4945-f50a-98e09aab8be4"
       },
-      "execution_count": 121,
+      "execution_count": 162,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 0\n",
-            "5 4 2\n",
-            "7 1 8\n",
+            "1 5 0\n",
+            "6 8 2\n",
+            "7 4 3\n",
             "\n"
           ]
         }
@@ -504,17 +508,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "INxCcEa8EwSR",
-        "outputId": "1366399e-a7a3-405e-9c41-350f4b159c2f"
+        "outputId": "4698e207-9bd6-4f48-d870-af57d60df3ff"
       },
-      "execution_count": 122,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 2\n",
-            "5 4 0\n",
-            "7 1 8\n",
+            "1 5 2\n",
+            "6 8 0\n",
+            "7 4 3\n",
             "\n"
           ]
         }
@@ -530,17 +534,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2HDc7vN8ExHF",
-        "outputId": "aec61ddd-abec-4693-f591-61d9c30d974f"
+        "outputId": "789c664c-b223-4179-b025-4e11f27225d8"
       },
-      "execution_count": 123,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 2\n",
-            "5 4 8\n",
-            "7 1 0\n",
+            "1 5 2\n",
+            "6 8 3\n",
+            "7 4 0\n",
             "\n"
           ]
         }
@@ -565,17 +569,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7iNlV7StEx2Q",
-        "outputId": "2d96cee5-06db-4054-bca9-7ee1365d0183"
+        "outputId": "9bfa1178-4e32-498b-d8b7-ce2b3b99bce6"
       },
-      "execution_count": 124,
+      "execution_count": 165,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6 3 2\n",
-            "5 4 8\n",
-            "7 1 0\n",
+            "1 5 2\n",
+            "6 8 3\n",
+            "7 4 0\n",
             "\n"
           ]
         }
@@ -602,9 +606,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aBKUYOTwAow0",
-        "outputId": "40ccd22c-9cc4-4a02-a2b6-fe5d34734db0"
+        "outputId": "fee467ea-f245-42cd-fafe-c8bcf9003d74"
       },
-      "execution_count": 125,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "stream",
