--- a/SlidingTilePuzzle.ipynb
+++ b/SlidingTilePuzzle.ipynb
@@ -6,7 +6,7 @@
       "name": "SlidingTilePuzzle.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM2w6Jd+sAb5APuDzCydIql",
+      "authorship_tag": "ABX9TyPHLE3IRKeWuzkh6NzXY8Lw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 24,
       "metadata": {
         "id": "WYBOqyaMt8Uy"
       },
@@ -53,7 +53,6 @@
         "    self.tabuleiro_f = [[1, 2, 3], [4, 5, 6], [7, 8, 0]]\n",
         "    self.tabuleiro = self.cria_tabuleiro()\n",
         "    self.index = self.encontra_pos_vazia()\n",
-        "    self.printTabuleiro(self.tabuleiro)\n",
         "\n",
         "\n",
         "  # Função para criação do tabuleiro, assumindo que a posição vazia é 0\n",
@@ -84,7 +83,10 @@
         "\n",
         "\n",
         "  # Apenas convertendo o tabuleiro para vizualização\n",
-        "  def printTabuleiro(self, tabuleiro):\n",
+        "  def print_tabuleiro(self, tabuleiro=None):\n",
+        "    if not tabuleiro:\n",
+        "      tabuleiro = self.tabuleiro\n",
+        "    \n",
         "    tabuleiro_string = \"\"\n",
         "\n",
         "    for l in range(len(tabuleiro)):\n",
@@ -109,8 +111,6 @@
         "      self.tabuleiro[l][c+1] = 0\n",
         "      self.index[1] = c+1\n",
         "    \n",
-        "    self.printTabuleiro(self.tabuleiro)\n",
-        "\n",
         "\n",
         "  def esquerda(self):\n",
         "    l = self.index[0]\n",
@@ -122,8 +122,6 @@
         "      self.tabuleiro[l][c-1] = 0\n",
         "      self.index[1] = c-1\n",
         "\n",
-        "    self.printTabuleiro(self.tabuleiro)\n",
-        "\n",
         "\n",
         "  def cima(self):\n",
         "    l = self.index[0]\n",
@@ -134,8 +132,6 @@
         "      self.tabuleiro[l][c] = temp\n",
         "      self.tabuleiro[l-1][c] = 0\n",
         "      self.index[0] = l-1\n",
-        "    \n",
-        "    self.printTabuleiro(self.tabuleiro)\n",
         "\n",
         "\n",
         "  def baixo(self):\n",
@@ -147,12 +143,10 @@
         "      self.tabuleiro[l][c] = temp\n",
         "      self.tabuleiro[l+1][c] = 0\n",
         "      self.index[0] = l+1\n",
-        "    \n",
-        "    self.printTabuleiro(self.tabuleiro)\n",
         "  \n",
         "\n",
         "  def estado_final(self):\n",
-        "    self.printTabuleiro(self.tabuleiro_f)"
+        "    self.print_tabuleiro(self.tabuleiro_f)\n"
       ]
     },
     {
@@ -170,24 +164,25 @@
       "cell_type": "code",
       "source": [
         "# Criando um tabuleiro aleatorio\n",
-        "tabuleiro = SlidingTilePuzzle()"
+        "tabuleiro = SlidingTilePuzzle()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z_ZS9J6jyq88",
-        "outputId": "54d8a415-48ae-42d0-84ff-a35beb2be704"
+        "outputId": "32a9be47-d2db-49f7-def1-4165f29656a4"
       },
-      "execution_count": 153,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 2\n",
-            "6 8 3\n",
-            "7 4 0\n",
+            "1 4 8\n",
+            "3 6 7\n",
+            "5 2 0\n",
             "\n"
           ]
         }
@@ -207,24 +202,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.esquerda()"
+        "tabuleiro.esquerda()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RwdOHjrw7dlw",
-        "outputId": "40b986f1-2edc-49c6-9b33-24f0b5feb0a0"
+        "outputId": "21042b93-0516-44b8-c102-ce8e2b2022f4"
       },
-      "execution_count": 154,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 2\n",
-            "6 8 3\n",
-            "7 0 4\n",
+            "1 4 8\n",
+            "3 6 7\n",
+            "5 0 2\n",
             "\n"
           ]
         }
@@ -233,24 +229,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.esquerda()"
+        "tabuleiro.esquerda()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mfs5WbwICsJh",
-        "outputId": "58e191e6-3fb9-439e-b717-73367f0cf0a5"
+        "outputId": "d39a2d00-38cc-4aa5-9dc9-bb71b3c3656f"
       },
-      "execution_count": 155,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 2\n",
-            "6 8 3\n",
-            "0 7 4\n",
+            "1 4 8\n",
+            "3 6 7\n",
+            "0 5 2\n",
             "\n"
           ]
         }
@@ -268,24 +265,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.esquerda()"
+        "tabuleiro.esquerda()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BWJEOwGzCtYJ",
-        "outputId": "6a7c94ad-2531-44b0-cb2e-91284f7340eb"
+        "outputId": "7f9c4b51-c9b4-4674-f6cb-00434bc0c605"
       },
-      "execution_count": 156,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 2\n",
-            "6 8 3\n",
-            "0 7 4\n",
+            "1 4 8\n",
+            "3 6 7\n",
+            "0 5 2\n",
             "\n"
           ]
         }
@@ -305,24 +303,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.direita()"
+        "tabuleiro.direita()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RvbZGw6O-b50",
-        "outputId": "ea884e8f-2af5-43f9-cb3b-20c556853f0a"
+        "outputId": "3b633540-2b90-4d92-8ef6-ec2dd14dde16"
       },
-      "execution_count": 157,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 2\n",
-            "6 8 3\n",
-            "7 0 4\n",
+            "1 4 8\n",
+            "3 6 7\n",
+            "5 0 2\n",
             "\n"
           ]
         }
@@ -331,24 +330,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.direita()"
+        "tabuleiro.direita()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d-M71ra7CInO",
-        "outputId": "d28b92bc-86a7-4f29-86d4-bfaeb416a71c"
+        "outputId": "d344aa57-b2e9-49b1-9d24-3b05c30d5b1c"
       },
-      "execution_count": 158,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 2\n",
-            "6 8 3\n",
-            "7 4 0\n",
+            "1 4 8\n",
+            "3 6 7\n",
+            "5 2 0\n",
             "\n"
           ]
         }
@@ -366,24 +366,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.direita()"
+        "tabuleiro.direita()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sbTAjKTvCKbg",
-        "outputId": "59e5dfd4-b7a7-485e-ce1c-0b73cf183b45"
+        "outputId": "4f8acfd4-eddd-48ee-9e3f-c2a1dc0aa458"
       },
-      "execution_count": 159,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 2\n",
-            "6 8 3\n",
-            "7 4 0\n",
+            "1 4 8\n",
+            "3 6 7\n",
+            "5 2 0\n",
             "\n"
           ]
         }
@@ -403,24 +404,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.cima()"
+        "tabuleiro.cima()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bHeHInT5-d37",
-        "outputId": "087fa653-afde-4cca-94da-4b8629330c1c"
+        "outputId": "2c55aa17-99ae-4d0f-b143-780516822b97"
       },
-      "execution_count": 160,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 2\n",
-            "6 8 0\n",
-            "7 4 3\n",
+            "1 4 8\n",
+            "3 6 0\n",
+            "5 2 7\n",
             "\n"
           ]
         }
@@ -429,24 +431,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.cima()"
+        "tabuleiro.cima()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9cmqrY_5FNpb",
-        "outputId": "378a2cb5-26a4-47a8-ff3e-3f4a82dde26b"
+        "outputId": "e5a51168-2b64-4cf5-c601-ee17f4ffbd69"
       },
-      "execution_count": 161,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 0\n",
-            "6 8 2\n",
-            "7 4 3\n",
+            "1 4 0\n",
+            "3 6 8\n",
+            "5 2 7\n",
             "\n"
           ]
         }
@@ -464,24 +467,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.cima()"
+        "tabuleiro.cima()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "j0nMvtY8Dmpu",
-        "outputId": "083bc366-3f46-4945-f50a-98e09aab8be4"
+        "outputId": "2a4b114f-3c82-41e0-b465-eea4123d2426"
       },
-      "execution_count": 162,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 0\n",
-            "6 8 2\n",
-            "7 4 3\n",
+            "1 4 0\n",
+            "3 6 8\n",
+            "5 2 7\n",
             "\n"
           ]
         }
@@ -501,24 +505,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.baixo()"
+        "tabuleiro.baixo()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "INxCcEa8EwSR",
-        "outputId": "4698e207-9bd6-4f48-d870-af57d60df3ff"
+        "outputId": "dd183ea4-a4a6-4886-ecf8-da4d8784e05b"
       },
-      "execution_count": 163,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 2\n",
-            "6 8 0\n",
-            "7 4 3\n",
+            "1 4 8\n",
+            "3 6 0\n",
+            "5 2 7\n",
             "\n"
           ]
         }
@@ -527,24 +532,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.baixo()"
+        "tabuleiro.baixo()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2HDc7vN8ExHF",
-        "outputId": "789c664c-b223-4179-b025-4e11f27225d8"
+        "outputId": "a51c37f3-c2a6-4ff4-c963-7e043919ea1e"
       },
-      "execution_count": 164,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 2\n",
-            "6 8 3\n",
-            "7 4 0\n",
+            "1 4 8\n",
+            "3 6 7\n",
+            "5 2 0\n",
             "\n"
           ]
         }
@@ -562,24 +568,25 @@
     {
       "cell_type": "code",
       "source": [
-        "tabuleiro.baixo()"
+        "tabuleiro.baixo()\n",
+        "tabuleiro.print_tabuleiro()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7iNlV7StEx2Q",
-        "outputId": "9bfa1178-4e32-498b-d8b7-ce2b3b99bce6"
+        "outputId": "b3b0b60a-cefb-4c7a-f9e9-c1bc1760879c"
       },
-      "execution_count": 165,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 5 2\n",
-            "6 8 3\n",
-            "7 4 0\n",
+            "1 4 8\n",
+            "3 6 7\n",
+            "5 2 0\n",
             "\n"
           ]
         }
@@ -606,9 +613,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aBKUYOTwAow0",
-        "outputId": "fee467ea-f245-42cd-fafe-c8bcf9003d74"
+        "outputId": "566975ce-1ce3-405c-9174-07bfd254edae"
       },
-      "execution_count": 166,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
